getJobsByCommit API and test
