# pkg/handler/commit.go
@@ -5,11 +5,14 @@ import (
 	"fmt"
 	"git-service/pkg/model"
 	"io"
+	"io/ioutil"
 	"net/http"
 	"strconv"
 	"strings"
 
 	urlpkg "net/url"
+
+	"github.com/gorilla/mux"
 )
 
 type CommitHandler interface {
@@ -17,6 +20,7 @@ type CommitHandler interface {
 	GetCommitsAfter(http.ResponseWriter, *http.Request)
 	GetCommitByMessage(http.ResponseWriter, *http.Request)
 	CommitReleased(http.ResponseWriter, *http.Request)
+	GetJobsByCommit(http.ResponseWriter, *http.Request)
 }
 
 var _ CommitHandler = &commitHandler{}
@@ -194,4 +198,62 @@ func getCommitsByPageNumber(baseUrl string, page_number int, req *http.Request, 
 		errMessage = "Error unmarshalling JSON: " + err.Error()
 	}
 	return
+}
+
+func (h *commitHandler) GetJobsByCommit(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	owner := vars["owner"]
+	repo := vars["repo"]
+	commitSHA := r.URL.Query().Get("commitSHA")
+	if commitSHA == "" {
+		http.Error(w, "SHA parameter is required", http.StatusBadRequest)
+		return
+	}
+
+	statuses, err := GetCommitStatuses(owner, repo, commitSHA)
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error fetching commit statuses: %v", err), http.StatusInternalServerError)
+		return
+	}
+
+	statusesJSON, err := json.Marshal(statuses)
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error marshalling statuses to JSON: %v", err), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(statusesJSON)
+}
+
+func GetCommitStatuses(owner, repo, commitSHA string) ([]Status, error) {
+	url := fmt.Sprintf("https://api.github.com/repos/%s/%s/commits/%s/status", owner, repo, commitSHA)
+
+	req, err := http.NewRequest("GET", url, nil)
+	if err != nil {
+		return nil, err
+	}
+
+	req.Header.Set("Accept", "application/vnd.github+json")
+	req.Header.Set("X-GitHub-Api-Version", "2022-11-28")
+
+	client := http.Client{}
+	resp, err := client.Do(req)
+	if err != nil {
+		return nil, err
+	}
+	defer resp.Body.Close()
+
+	body, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		return nil, err
+	}
+
+	var statusResp GitHubStatusResponse
+	if err := json.Unmarshal(body, &statusResp); err != nil {
+		return nil, err
+	}
+
+	return statusResp.Statuses, nil
 }
